--- a/ProceduralGeneration/ProceduralGeneration.vcxproj.filters
+++ b/ProceduralGeneration/ProceduralGeneration.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="src\Mouse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\picosha2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
