--- a/ProceduralGeneration/ProceduralGeneration.vcxproj.filters
+++ b/ProceduralGeneration/ProceduralGeneration.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\Player.cpp">
       <Filter>Player</Filter>
     </ClCompile>
+    <ClCompile Include="src\Console.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Renderer.h">
@@ -94,6 +97,9 @@
     </ClInclude>
     <ClInclude Include="src\picosha2.h">
       <Filter>Player</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Console.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
