--- a/ProceduralGeneration/ProceduralGeneration.vcxproj
+++ b/ProceduralGeneration/ProceduralGeneration.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Console.cpp" />
+    <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\Globals.cpp" />
     <ClCompile Include="src\ChunkLoader.cpp" />
     <ClCompile Include="src\logging\loguru.cpp" />
@@ -170,6 +171,7 @@
   <ItemGroup>
     <ClInclude Include="src\ChunkLoader.h" />
     <ClInclude Include="src\Console.h" />
+    <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Globals.h" />
     <ClInclude Include="src\logging\loguru.hpp" />
     <ClInclude Include="src\Mouse.h" />
