--- a/ProceduralGeneration/ProceduralGeneration.vcxproj.filters
+++ b/ProceduralGeneration/ProceduralGeneration.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="src\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\PerlinNoise.cpp">
-      <Filter>TerrainGeneration</Filter>
-    </ClCompile>
     <ClCompile Include="src\Renderer.cpp">
       <Filter>Rendering</Filter>
     </ClCompile>
@@ -83,9 +80,6 @@
     <ClInclude Include="src\FPS.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\PerlinNoise.h">
-      <Filter>TerrainGeneration</Filter>
-    </ClInclude>
     <ClInclude Include="src\TerrainGeneration.h">
       <Filter>TerrainGeneration</Filter>
     </ClInclude>
@@ -118,6 +112,9 @@
     </ClInclude>
     <ClInclude Include="src\Game.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FastNoiseLite.h">
+      <Filter>TerrainGeneration</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
